# joseph

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
dependencies/: CMakeLists.txt
dependencies/visualizer/: CMakeLists.txt
dependencies/visualizer/include/visualizer/: Attributes.h  Constants.h  Guides.h  IDataProvider.h  Position.h  Spectrum.h  Uniforms.h  Utility.h  Vbo.h  Visualizer.h
dependencies/visualizer/resource/: vertex.glsl
dependencies/visualizer/source/: Attribute.cpp  Guides.cpp  Spectrum.cpp  Uniforms.cpp  Vbo.cpp  Visualizer.cpp
dependencies/visualizer/test/include/: DummyDataProvider.h  MainComponent.h
dependencies/visualizer/test/source/: DummyDataProvider.cpp  Main.cpp  MainComponent.cpp
include/: PluginEditor.h  PluginProcessor.h  SpectrumAnalyzer.h
source/: PluginEditor.cpp  PluginProcessor.cpp  SpectrumAnalyzer.cpp
